# ROS

./: .gitignore  Move_It.txt  README.md  ROS_1.txt  build.zsh
de_cuong/: Ke_Hoach_De_Cuong.xlsx
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/my_delta_robot/: PositionArm.h  angulo.h  image_pos.h  linear_speed_xyz.h  num_point.h  posicionxyz.h  vmax_amax.h
devel/lib/my_delta_robot/: draw  draw_square  main_node  node_a  node_b  serial_module  test_acuracy  test_node_a
devel/lib/pkgconfig/: my_delta_robot.pc
devel/lib/python2.7/dist-packages/my_delta_robot/msg/: _PositionArm.py  __init__.py  _angulo.py  _image_pos.py  _linear_speed_xyz.py  _num_point.py  _posicionxyz.py  _vmax_amax.py
devel/share/common-lisp/ros/my_delta_robot/msg/: PositionArm.lisp  _package.lisp  _package_PositionArm.lisp  _package_angulo.lisp  _package_image_pos.lisp  _package_linear_speed_xyz.lisp  _package_num_point.lisp  _package_posicionxyz.lisp  _package_vmax_amax.lisp  angulo.lisp  image_pos.lisp  linear_speed_xyz.lisp  my_delta_robot-msg.asd  num_point.lisp  posicionxyz.lisp  vmax_amax.lisp
devel/share/gennodejs/ros/my_delta_robot/msg/: PositionArm.js  _index.js  angulo.js  image_pos.js  linear_speed_xyz.js  num_point.js  posicionxyz.js  vmax_amax.js
devel/share/my_delta_robot/cmake/: my_delta_robot-msg-extras.cmake  my_delta_robot-msg-paths.cmake  my_delta_robotConfig.cmake
devel/share/roseus/ros/my_delta_robot/: manifest.l
devel/share/roseus/ros/my_delta_robot/msg/: PositionArm.l  angulo.l  image_pos.l  linear_speed_xyz.l  num_point.l  posicionxyz.l  vmax_amax.l
docs/: software_architecture.md
src/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/beginner_tutorials/: CMakeLists.txt  CMakeLists_.txt  package.xml
src/beginner_tutorials/include/: PID.h  fuzzy_ctrl.h
src/beginner_tutorials/include/beginner_tutorials/: PID.cpp  PID.h  fuzzy_ctrl.cpp  fuzzy_ctrl.h
src/beginner_tutorials/msg/: Monitor.msg  PositionArm.msg
src/beginner_tutorials/src/: add_numbers_client.cpp  add_numbers_server.cpp  land_mark_client.cpp  land_mark_server.cpp  listener.cpp  talker.cpp
src/beginner_tutorials/srv/: GetDistance.srv
src/delta_robot/: CMakeLists.txt  common.cpp  common.h  delta_robot.cpp  delta_robot.h  joint_state_config.hpp  motion_planner.hpp
src/launch/: display.launch.py  initial_pose.launch.py  my_delta.launch  test_node_a.launch
src/msg/: LinearSpeedXYZ.msg  NumPoint.msg  PositionArm.msg
src/my_delta_robot/: CMakeLists.txt  CMakeLists_.txt  package.xml
src/my_delta_robot/include/my_delta_robot/: codos.cpp  common.cpp  delta_define.h  delta_robot.cpp  delta_robot.h
src/my_delta_robot/launch/: my_delta.launch  test_node_a.launch
src/my_delta_robot/msg/: ImagePos.msg  NumPoint.msg
src/my_delta_robot/python_script/: camera_node.py  test_camera_node.py
src/my_delta_robot/rviz/: my_config.rviz
src/my_delta_robot/src/: common.cpp  common.h  delta_robot.cpp  delta_robot.h  draw.cpp  draw_square.cpp  main_node.cpp  node_a.cpp  node_b.cpp  serial_module.cpp  test_acuracy.cpp  test_node_a.cpp  test_serial.cpp  workspace.cpp
src/my_delta_robot/urdf/: Delta_robot.gv
src/position_arms/: CMakeLists.txt  package.xml
src/position_arms/src/: monitor.cpp  position.cpp  taker.cpp
src/python_script/: initial_pose_publisher.py  my_camera.py  simple_camera.py
src/python_scripts/: camera_node.py  demo_node.py  gui_user_interface_node.py  initial_pose_publisher.py  test_camera.py  test_camera_node.py  user_interface_node.py
src/rviz/: my_config.rviz
src/simu_visual/: CMakeLists.txt  package.xml
src/simu_visual/include/simu_visual/: delta_define.h  delta_robot.cpp  delta_robot.h
src/simu_visual/launch/: my_delta.launch
src/simu_visual/msg/: linear_speed_xyz.msg  matriz_path_ls.msg  posicionxyz.msg  vmax_amax.msg
src/simu_visual/python_script/: camera_node.py  camera_node.py.bak  camera_node_bak.py  camera_node_bak.py.bak  test_camera.py
src/simu_visual/script/: SerialModule.py  codos_tm1_adams.py  delta_define.py  delta_kinematics_Paderborn_tm1_adams.py  delta_kinematics_t1m_adams.py  jacobian_Paderborn_tm1_v2_adams.py  jacobian_tm1_adams.py  linear_speed_f_adams.py  node_1.py  node_2.py  node_test.py  path_tm1_v2_adams.py  plot_delta.py  posicionador_rviz_realtime_tm1_adams.py  posicionador_rviz_tm1_adams.py  realtime.py  realtime_bak.py  torque_m1_Paderborn_v2_adams.py  torque_m1_adams.py  trans_rot_ls_adams.py  workspace_v2.py
src/simu_visual/src/: Makefile  main_node.cpp  node_a.cpp  node_b.cpp  position.cpp  run_time.cpp  serial_module.cpp  test.cpp  test_node_a.cpp  test_serial.cpp  workspace.cpp
src/simu_visual/urdf/: delta_robot.urdf
src/src/: draw.cpp  draw_node.cpp  main_node.cpp  node_a.cpp  node_b.cpp  serial_module.cpp  test_acuracy.cpp
src/test/: test_delta_robot.cpp
src/urdf/: delta_robot.urdf
