<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>my_delta_robot</name>
    <version>0.0.0</version>
    <description>Delta parallel robot: inverse kinematics, trapezoidal velocity profiles, joint_states and RViz visualization.</description>
    <maintainer email="thanhduong2625@gmail.com">thanhduong</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    
    <depend>geometry_msgs</depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <exec_depend>urdf</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
